--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,22 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xformers is not installed correctly. If you want to use memory_efficient_attention to accelerate training use the following command to install Xformers\n",
+      "pip install xformers.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'label': 'sadness', 'score': 0.991142988204956}]\n",
-      "Detected emotion: sadness\n"
+      "[{'label': 'anger', 'score': 0.9456638097763062}]\n",
+      "Detected emotion: anger\n"
      ]
     }
    ],
    "source": [
     "emotion_classifier = pipeline(\"text-classification\", model=\"j-hartmann/emotion-english-distilroberta-base\")\n",
     "\n",
-    "text = \"Im feeling depressed :(\"\n",
+    "text = \"i hate niggers\"\n",
     "\n",
     "# Detect emotion\n",
     "emotion_result = emotion_classifier(text)\n",
