changed text in jupyter notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
    "source": [
     "emotion_classifier = pipeline(\"text-classification\", model=\"j-hartmann/emotion-english-distilroberta-base\")\n",
     "\n",
-    "text = \"i hate niggers\"\n",
+    "text = \"i love niggers\"\n",
     "\n",
     "# Detect emotion\n",
     "emotion_result = emotion_classifier(text)\n",
